--- a/assests/style_campeoes.css
+++ b/assests/style_campeoes.css
@@ -29,3 +29,15 @@
     align-items: center;
     color: white;
 }
+
+.section_banner_campeoes .texto_banner_campeoes .btn_lerMais{
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #f1f1f1;
+}
+
+.section_banner_campeoes .texto_banner_campeoes .btn_lerMais:hover{
+    cursor: pointer;
+}
