inserção da web-data-viz

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
 * {box-sizing: border-box;}
 
 body {
-    background-image: url(img/ceu-estrelado-com-nebulosa_104785-439.avif);
+    background-image: url();
     background-position: right;
     background-size: cover;
 }
