--- a/public/css/style_campeoes.css
+++ b/public/css/style_campeoes.css
@@ -5,6 +5,11 @@
     margin-top: 2%;
 }
 
+.section_banner_campeoes{
+    background-image: url(../assets/img/ceu-estrelado-com-nebulosa_104785-439.avif);
+    background-size: cover;
+}
+
 .section_banner_campeoes .section_banner_imagem {
     width: 80%;
 }
@@ -22,7 +27,7 @@
 .section_banner_campeoes .texto_banner_campeoes {
     padding-left: 2px;
     font-size: 20px;
-    width: 30%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: center;
