--- a/public/dashboard/dashboard.css
+++ b/public/dashboard/dashboard.css
@@ -1,276 +1,299 @@
-/* pagina mural */
-
-*,
-body {
-  font-family: "Exo 2", sans-serif;
-}
-
-.label-captura {
-  display: flex;
-  justify-content: center;
-}
-
-.dash-right .avisos {
-  width: 100%;
-  /* border: 3px solid pink; */
-  color: rgb(216, 216, 216);
-  font-family: "Exo 2", sans-serif;
-}
-
-.dash-right .avisos .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.dash-right .avisos .container .div-form {
-  width: 100%;
-}
-
-.dash-right .avisos .container .div-form #form_postagem {
-  width: 100%;
-}
-
-.dash-right .avisos .div-form label {
-  width: 100%;
-}
-
-.dash-right .avisos .div-form input {
-  width: 100%;
-  border-radius: 5px;
-}
-
-.dash-right .avisos .div-form textarea {
-  width: 100%;
-  /* color: #E6005A; */
-  border: 3px solid #e6005a;
-  background-color: white;
-  border-radius: 5px;
-}
-
-.dash-right .avisos .div-form button {
-  cursor: pointer;
-  font-family: "Exo 2", sans-serif;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 18px;
-  padding: 10px 15px;
-  color: white;
-  background-color: #e6005a;
-  width: 120px;
-}
-
-.publicacao-btn-editar {
-  cursor: pointer;
-  font-family: "Exo 2", sans-serif;
-  border: 0;
-  border-radius: 5px;
-  font-weight: 600;
-  font-size: 14px;
-  padding: 5px 8px;
-  color: white;
-  background-color: #e6005a;
-  width: 80px;
-}
-
-.publicacao {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: stretch;
-  flex-direction: column;
-  justify-content: center;
-  align-items: stretch;
-  border-bottom: 3px solid #e6005a;
-  padding: 20px;
-}
-
-.publicacao > *:not(:last-child) {
-  padding: 0 0 10px 0;
-}
-
-.div-results {
-  width: 100%;
-}
-
-.div-results .feed-container {
-  background-color: #212124;
-  border-radius: 5px;
-  margin-bottom: 80px;
-}
-
-.div-buttons {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.div-buttons > * {
-  margin-left: 30px;
-}
-
-/* pagina graficos */
-
-.dash-header {
-  background-color: #212124;
-}
-
-.dash {
-  width: 80%;
-  position: relative;
-  top: 0;
-  left: 20%;
-  background-color: #161618;
-  height: 100vh;
-  overflow: auto;
-}
-
-.regua {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  margin-top: 30px;
-}
-
-.perigo-frio {
-  background-color: #5c6bc0;
-}
-
-.perigo-quente {
-  background-color: #ff7043;
-}
-
-.alerta-frio {
-  background-color: #42a5f5;
-}
-
-.alerta-quente {
-  background-color: #ffee58;
-}
-
-.ideal {
-  background-color: #9ccc65;
-}
-
-.item-regua {
-  padding: 5px;
-  width: 15%;
-  margin: 5px;
-  text-align: center;
-  padding-top: 15px;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  height: 450px;
-  width: 100%;
-  align-items: center;
-  color: white;
-}
-
-.card {
-  margin: 2%;
-  width: 40%;
-  flex-wrap: wrap;
-  display: flex;
-  text-align: center;
-  height: 180px;
-  justify-content: right;
-  background-color: #212124;
-  font-size: 20px;
-}
-
-.card p {
+* {
   margin: 0;
-  font-size: 50px;
-  font-weight: lighter;
-  text-align: left;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.cards h1 {
-  font-size: 22px;
-  width: 100%;
-  border-bottom: solid white 1px;
-  text-align: left;
-  font-weight: lighter;
-  margin: 20px;
+:root {
+  --body-color: #18191a;
+  --sidebar-color: #242526;
+  --primary-color: #3a3b3c;
+  --primary-color-light: #3a3b3c;
+  --text-color: #ccc;
+  --toggle-color: #fff;
 }
 
-.temperatura,
-.umidade {
-  margin: 5px;
-  margin-left: 20px;
-  width: 75%;
+body {
+  height: 100vh;
+  background: var(--body-color);
+  transition: var(--tran-04);
 }
 
-.cor-alerta {
-  width: 13%;
-  height: 30%;
-  border-radius: 50%;
-  display: inline-block;
+
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 250px;
+  background: var(--sidebar-color);
+  padding: 10px 14px;
+  transition: var(--tran-05);
+  white-space: nowrap;
+  opacity: 1;
+  z-index: 100;
 }
 
-.btns-dash {
+.sidebar.close {
+  width: 88px;
+}
+
+.sidebar .text {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text-color);
+
+
+}
+
+.sidebar.close .text {
+  opacity: 0;
+}
+
+.sidebar .image {
+  min-width: 60px;
+  display: flex;
+  align-items: center;
+}
+
+
+.sidebar li {
+  height: 50px;
+  margin-top: 10px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+
+.sidebar li .icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 30px;
+  min-width: 60px;
+  font-size: 20px;
+
 }
 
-.graph {
-  width: 80%;
-  margin: auto;
-  padding-top: 10px;
+.sidebar li .icon,
+.sidebar li .text {
+  color: var(--text-color);
+  transition: var(--tran-02);
 }
 
-.tituloGraficos {
-  color: rgb(216, 216, 216);
+.sidebar header {
+  position: relative;
+}
+
+
+.sidebar .image-text img {
+  width: 50px;
+  border-radius: 6px;
+
+}
+
+.sidebar header .image-text {
   display: flex;
-  justify-content: center;
+  align-items: center;
+
 }
 
-.btn-chart {
-  font-family: "Exo 2", sans-serif;
-  border: 0;
+header .image-text .header-text {
+  display: flex;
+  flex-direction: column;
+  margin-left: 3%;
+
+}
+
+.header-text .name {
   font-weight: 600;
-  font-size: 18px;
-  padding: 10px 15px;
-  color: #e6005a;
-  background-color: white;
-  margin: 5px;
-  border-radius: 3px;
-}
-
-.btn-pink {
-  color: white;
-  background-color: #e6005a;
-}
-
-.btn-white {
-  color: #e6005a;
-  background-color: white;
 
 }
 
-.label-captura {
-  height: 80px;
+.header-text .profession {
+  margin-top: -2px;
 }
 
-.display-none {
-  display: none;
-}
+.sidebar header .toggle {
+  position: absolute;
+  top: 50%;
+  right: -25px;
+  padding-top: 1%;
+  transform: translateY(-50%) rotate(180deg);
 
-.display-flex {
+  height: 25px;
+  width: 25px;
+  background: var(--primary-color);
   display: flex;
+  align-self: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: var(--sidebar-color);
+  font-size: 22px;
+  transition: var(--tran-03);
 }
 
-.display-block {
-  display: block;
+.sidebar.close header .toggle {
+  transform: translateY(-50%);
+
 }
 
-canvas {
-  width: 100% !important;
-  height: 100% !important;
+body.dark .sidebar header .toggle {
+  color: var(--text-color);
+}
+
+.sidebar li .link {
+  text-decoration: none;
+  height: 100%;
+  cursor: pointer;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-radius: 6px;
+  transition: var(--tran-04);
+}
+
+.sidebar li .link.active{
+  background: var(--primary-color-light);
+}
+.sidebar li .link:hover {
+  background: var(--primary-color);
+}
+
+
+
+.sidebar li .link:hover .icon,
+.sidebar li .link:hover .text {
+  color: var(--sidebar-color);
+}
+
+
+
+body.dark .sidebar li .link:hover .icon,
+body.dark .sidebar li .link:hover .text {
+  color: var(--text-color);
+}
+
+.sidebar .menu-bar {
+
+
+  height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+}
+
+
+.menu-bar .mode {
+  position: relative;
+  border-radius: 6px;
+  background: var(--primary-color-light);
+
+}
+
+.menu-bar .mode .moon-sun {
+  height: 50px;
+  width: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.menu-bar .mode i {
+  position: absolute;
+  transform: var(--tran-03);
+}
+
+.menu-bar .mode i.sun{
+  opacity: 0;
+}
+
+body.dark .menu-bar .mode i.sun{
+  opacity: 1;
+}
+
+
+body.dark .menu-bar .mode i.moon{
+  opacity: 0;
+}
+
+
+.menu-bar .mode .toggle-switch {
+  position: absolute;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  min-width: 60px;
+  cursor: pointer;
+  background: var(--primary-color-light);
+
+
+}
+
+.toggle-switch .switch {
+  position: relative;
+  height: 22px;
+  width: 44px;
+  border-radius: 25px;
+  background: var(--toggle-color);
+}
+
+.switch::before {
+  content: "";
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background: var(--sidebar-color);
+  transition: var(--tran-03);
+}
+
+body.dark .switch::before {
+
+  left: 24px;
+}
+
+.home{
+  position: relative;
+  left: 250px;
+  height: 100vh;
+  width: calc(100% - 250px);
+  background: var(--body-color);
+  transition: var(--tran-05);
+}
+
+.home{
+  font-size: 30px;
+  font-weight: 500;
+  color: var(--text-color);
+  padding: 8px 40px;
+}
+
+.sidebar.close ~ .home{
+  left: 88px;
+  width: calc(100% -88px);
+}
+
+.dashboard .graficos{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.dashboard .graficos .grafico{
+  width: 30%;
+  height: 300px;
+  background: var(--primary-color-light);
+}
+
+
+
+.none{
+  display: none;
 }
