--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,9 @@
   --background-modal-cadastro2: rgba(0, 0, 0, 4);
   --background-conteudo-cadastro: #fefefe;
   --background-color-botao-cadastro: #e2e615f5;
+  --letra_color_primaria: goldenrod;
+  --bg_color_footer:black;
+  --borda_color: rgb(10, 110, 150);
 }
 
 body {
@@ -223,4 +226,91 @@ section_background {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+footer {
+  background: var(--bg_color_footer);
+  display: flex;
+  text-decoration: none;
+  justify-content: space-evenly;
+  color: var(--letra_color_primaria);
+  border-top: 2px solid var(--borda_color);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-weight: 600;
+}
+
+footer ul li {
+  padding: 5px;
+  
+}
+
+footer ul li a {
+  color: var(--letra_color_primaria);
+}
+
+.contato a{
+  cursor: default;
+}
+
+.redes {
+  display: flex;
+  justify-content: space-around;
+}
+
+.redes li i {
+  font-size: 40px;
+  padding-right: 10px;
+}
+
+footer ul li {
+  list-style: none;
+  font-size: 16px;
+}
+
+.icones_redes {
+  transition: 0.6s;
+}
+
+
+.icones_redes:hover {
+  transition: 0.6s;
+  font-size: 45px;
+}
+
+.facebook {
+  color: #00004d;
+}
+
+.instagram {
+  color: #ce8302;
+}
+
+.github {
+  color: #560056;
+}
+
+.linkedin {
+  color: #004c6f;
+
+}
+
+.facebook:hover {
+  color: #3b3bfb;
+
+}
+
+.instagram:hover {
+  color: #eda62c;
+
+}
+
+.github:hover {
+  color: #bd34bd;
+
+}
+
+.linkedin:hover {
+  color: #198bb4;
+
 }
