--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,7 +87,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: goldenrod;
+  color: white;
+  text-shadow: 0px 0px 10px  5px black;
 }
 
 .section_banner_inicial .imagem_banner_inicial {
@@ -184,6 +185,7 @@ section_background {
 /* Caption text */
 .container_campeoes {
   color: #f2f2f2;
+  text-shadow: 0px 0px 10px  5px black;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -195,6 +197,7 @@ section_background {
 /* Number text (1/3 etc) */
 .numero_campeao{
   color: #f2f2f2;
+  text-shadow: 0px 0px 10px  5px black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
