--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,6 +12,8 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
+  background-image:linear-gradient(to right, rgb(39, 8, 78) ,rgba(39, 11, 139, 0.63), rgba(21, 23, 131, 0.836));
+  background-size: cover;
 }
 
 * {
@@ -19,14 +21,15 @@ body {
 }
 
 .menu {
-  height: 50px;
+  height: 90px;
   transition: 0.6s;
   display: flex;
+  background-color: rgba(20, 4, 75, 0.986);
 }
 
 .container {
-
-  width: 95%;
+  background-color: rgba(20, 4, 75, 0.986);
+  width: 90%;
   margin: auto;
 }
 
@@ -38,6 +41,13 @@ body {
 
 .usuario_opcao li {
   margin-right: 50px;
+}
+
+.menu button {
+  background-color: goldenrod;
+  width: 100px;
+  height: 40px;
+  border-radius: 10px;
 }
 
 .menu ul {
@@ -62,14 +72,10 @@ body {
   transition: 0.6s;
 }
 
-.menu ul li:hover {
-  font-size: 20px;
-  transition: 0.6s;
-}
 /* section inicial */
 .section_banner_inicial {
-  background-image: url(../assets/img/ceu-estrelado-com-nebulosa_104785-439.avif);
-  background-size: cover;
+  margin-top: 0;
+  
 }
 
 .section_banner_inicial {
@@ -107,6 +113,7 @@ body {
 
 .section_banner_inicial .texto_banner_inicial img {
   width: 60px;
+
 }
 
 section_background {
@@ -229,91 +236,4 @@ section_background {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
-}
-
-footer {
-  background: var(--bg_color_footer);
-  display: flex;
-  text-decoration: none;
-  justify-content: space-evenly;
-  color: var(--letra_color_primaria);
-  border-top: 2px solid var(--borda_color);
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-weight: 600;
-}
-
-footer ul li {
-  padding: 5px;
-  
-}
-
-footer ul li a {
-  color: var(--letra_color_primaria);
-}
-
-.contato a{
-  cursor: default;
-}
-
-.redes {
-  display: flex;
-  justify-content: space-around;
-}
-
-.redes li i {
-  font-size: 40px;
-  padding-right: 10px;
-}
-
-footer ul li {
-  list-style: none;
-  font-size: 16px;
-}
-
-.icones_redes {
-  transition: 0.6s;
-}
-
-
-.icones_redes:hover {
-  transition: 0.6s;
-  font-size: 45px;
-}
-
-.facebook {
-  color: #00004d;
-}
-
-.instagram {
-  color: #ce8302;
-}
-
-.github {
-  color: #560056;
-}
-
-.linkedin {
-  color: #004c6f;
-
-}
-
-.facebook:hover {
-  color: #3b3bfb;
-
-}
-
-.instagram:hover {
-  color: #eda62c;
-
-}
-
-.github:hover {
-  color: #bd34bd;
-
-}
-
-.linkedin:hover {
-  color: #198bb4;
-
 }
