--- a/public/dashboard/dashboard.css
+++ b/public/dashboard/dashboard.css
@@ -20,269 +20,69 @@ body {
   transition: var(--tran-04);
 }
 
-
-
-.sidebar {
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 250px;
-  background: var(--sidebar-color);
-  padding: 10px 14px;
-  transition: var(--tran-05);
-  white-space: nowrap;
-  opacity: 1;
-  z-index: 100;
-}
-
-.sidebar.close {
-  width: 88px;
-}
-
-.sidebar .text {
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--text-color);
-
-
-}
-
-.sidebar.close .text {
-  opacity: 0;
-}
-
-.sidebar .image {
-  min-width: 60px;
+.menu {
+  height: 90px;
+  transition: 0.6s;
   display: flex;
+  background-color: rgba(20, 4, 75, 0.986);
+}
+
+.container {
+  background-color: rgba(20, 4, 75, 0.986);
+  width: 90%;
+  margin: auto;
+}
+
+.container .usuario_opcao {
+  display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
+.usuario_opcao li {
+  margin-right: 50px;
+}
 
-.sidebar li {
-  height: 50px;
-  margin-top: 10px;
-  list-style: none;
+.menu ul {
   display: flex;
-  align-items: center;
-}
-
-
-.sidebar li .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 60px;
-  font-size: 20px;
-
-}
-
-.sidebar li .icon,
-.sidebar li .text {
-  color: var(--text-color);
-  transition: var(--tran-02);
-}
-
-.sidebar header {
-  position: relative;
-}
-
-
-.sidebar .image-text img {
-  width: 50px;
-  border-radius: 6px;
-
-}
-
-.sidebar header .image-text {
-  display: flex;
-  align-items: center;
-
-}
-
-header .image-text .header-text {
-  display: flex;
-  flex-direction: column;
-  margin-left: 3%;
-
-}
-
-.header-text .name {
-  font-weight: 600;
-
-}
-
-.header-text .profession {
-  margin-top: -2px;
-}
-
-.sidebar header .toggle {
-  position: absolute;
-  top: 50%;
-  right: -25px;
-  padding-top: 1%;
-  transform: translateY(-50%) rotate(180deg);
-
-  height: 25px;
-  width: 25px;
-  background: var(--primary-color);
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  border-radius: 50%;
-  color: var(--sidebar-color);
-  font-size: 22px;
-  transition: var(--tran-03);
-}
-
-.sidebar.close header .toggle {
-  transform: translateY(-50%);
-
-}
-
-body.dark .sidebar header .toggle {
-  color: var(--text-color);
-}
-
-.sidebar li .link {
-  text-decoration: none;
-  height: 100%;
-  cursor: pointer;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  border-radius: 6px;
-  transition: var(--tran-04);
-}
-
-.sidebar li .link.active{
-  background: var(--primary-color-light);
-}
-.sidebar li .link:hover {
-  background: var(--primary-color);
-}
-
-
-
-.sidebar li .link:hover .icon,
-.sidebar li .link:hover .text {
-  color: var(--sidebar-color);
-}
-
-
-
-body.dark .sidebar li .link:hover .icon,
-body.dark .sidebar li .link:hover .text {
-  color: var(--text-color);
-}
-
-.sidebar .menu-bar {
-
-
-  height: calc(100% - 50px);
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
-
-}
-
-
-.menu-bar .mode {
-  position: relative;
-  border-radius: 6px;
-  background: var(--primary-color-light);
-
-}
-
-.menu-bar .mode .moon-sun {
-  height: 50px;
-  width: 60px;
-  display: flex;
   align-items: center;
+  list-style: none;
+  padding: 5px;
+  height: 45px;
+  font-weight: 400;
 }
 
-.menu-bar .mode i {
-  position: absolute;
-  transform: var(--tran-03);
+.menu ul li {
+  font-size: 15px;
+
+  transition: 0.6s;
+  color: aliceblue;
 }
 
-.menu-bar .mode i.sun{
-  opacity: 0;
+.menu ul li a img:hover {
+  width: 120px;
+  transition: 0.6s;
 }
 
-body.dark .menu-bar .mode i.sun{
-  opacity: 1;
-}
-
-
-body.dark .menu-bar .mode i.moon{
-  opacity: 0;
-}
-
-
-.menu-bar .mode .toggle-switch {
-  position: absolute;
-  right: 0px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  min-width: 60px;
-  cursor: pointer;
-  background: var(--primary-color-light);
-
-
-}
-
-.toggle-switch .switch {
-  position: relative;
-  height: 22px;
-  width: 44px;
-  border-radius: 25px;
-  background: var(--toggle-color);
-}
-
-.switch::before {
-  content: "";
-  position: absolute;
-  height: 15px;
-  width: 15px;
-  border-radius: 50%;
-  top: 50%;
-  left: 5px;
-  transform: translateY(-50%);
-  background: var(--sidebar-color);
-  transition: var(--tran-03);
-}
-
-body.dark .switch::before {
-
-  left: 24px;
+.menu ul li:hover {
+  font-size: 20px;
+  transition: 0.6s;
 }
 
 .home{
-  position: relative;
-  left: 250px;
-  height: 100vh;
-  width: calc(100% - 250px);
-  background: var(--body-color);
-  transition: var(--tran-05);
-}
-
-.home{
-  font-size: 30px;
-  font-weight: 500;
   color: var(--text-color);
-  padding: 8px 40px;
-}
-
-.sidebar.close ~ .home{
-  left: 88px;
-  width: calc(100% -88px);
+  position: relative;
+  left: 100px;
+  height: 50vh;
+  top: 70px;
+  width: calc(100% - 250px);
+  background: var(--body-color);;
 }
 
 .dashboard .graficos{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
 }
 
