--- a/public/css/style_campeoes.css
+++ b/public/css/style_campeoes.css
@@ -42,6 +42,11 @@
     color: #f1f1f1;
 }
 
+.btnLerMais {
+    height: 50px;
+    width: 100px;
+    background-color: goldenrod;
+}
 /* section videos extras */
 
 .section_historia_auxiliar{
